compiler/testData/diagnostics/tests/qualifiedExpression/nullCalleeExpression.fir.kt
// !WITH_NEW_INFERENCE
// NI_EXPECTED_FILE

val unwrapped = some.<!SYNTAX!><<!><!UNRESOLVED_REFERENCE!>cabc<!><!UNRESOLVED_REFERENCE!><!SYNTAX!>$Wrapper<!><<!PROJECTION_ON_NON_CLASS_TYPE_ARGUMENT!>out Any<!>>::unwrap<!>
